views changed to accomodate admin

--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -16,20 +16,16 @@
 
       <div class="row">
         <div class="col-xs-1">
-          <% if logged_in? %>
-            <% if admin? %>
-              <%= link_to 'New Bike rack', new_bike_rack_path, class: 'btn btn-default' %> 
-            <% end %>
+          <% if logged_in? && admin? %>
+            <%= link_to 'New Bike rack', new_bike_rack_path, class: 'btn btn-default' %> 
           <% end %>
         </div>
         <div class="col-xs-10">
         <h1 id="title">Bike Racks - Total:<%= BikeRack.all.count %></h1>
         </div>
         <div class="col-xs-1">
-          <% if logged_in? %>
-            <% if admin? %>
+          <% if logged_in? && admin? %>
               <%= button_to "Populate", bikeracks_populateBRData_path, class: 'btn btn-default' %>
-            <% end %>
           <% end %>
         </div>
       </div>
@@ -54,11 +50,9 @@
               <td><%= bike_rack.latitude %></td>
               <td><%= bike_rack.longitude %></td>
               <td><%= link_to 'Show', bike_rack %>
-                <% if logged_in? %>
-                  <% if admin? %>
-                    <%= link_to 'Edit', edit_bike_rack_path(bike_rack) %>
-                    <%= link_to 'Destroy', bike_rack, method: :delete, data: { confirm: 'Are you sure?' } %>
-                  <% end %>
+                <% if logged_in? && admin? %>
+                  <%= link_to 'Edit', edit_bike_rack_path(bike_rack) %>
+                  <%= link_to 'Destroy', bike_rack, method: :delete, data: { confirm: 'Are you sure?' } %>
                 <% end %>
               </td>
             </tr>
