--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -9,20 +9,16 @@
     <div class="col-xs-10">
       <div class="row">
         <div class="col-xs-1">        
-          <% if logged_in? %>
-            <% if admin? %>
-              <%= link_to 'New Water fountain', new_water_fountain_path, class: 'btn btn-default' %>
-            <% end %>
+          <% if logged_in? && admin? %>
+            <%= link_to 'New Water fountain', new_water_fountain_path, class: 'btn btn-default' %>
           <% end %>
         </div>
         <div class="col-xs-10" id="title">
         <h1>Water Fountains - Total: <%= WaterFountain.all.count %></h1>
         </div>
         <div class="col-xs-1">
-          <% if logged_in? %>
-            <% if admin? %>
-              <%= button_to "Populate", waterfountains_populateWFData_path, class: 'btn btn-default' %>
-            <% end %>
+          <% if logged_in? && admin? %>
+            <%= button_to "Populate", waterfountains_populateWFData_path, class: 'btn btn-default' %>
           <% end %>
         </div>
       </div>
@@ -43,8 +39,11 @@
               <td><%= water_fountain.lat %></td>
               <td><%= water_fountain.lon %></td>
               <td><%= link_to 'Show', water_fountain %>
-                <%= link_to 'Edit', edit_water_fountain_path(water_fountain) %>
-                <%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <% if logged_in? && admin? %>
+                  <%= link_to 'Edit', edit_water_fountain_path(water_fountain) %>
+                  <%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %>
+                <% end %>
+              </td>
             </tr>
             <% end %>
           </tbody>
