--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -4,7 +4,7 @@
 
 <head>
 <style>
-
+.voffset4 { margin-top: 30px; }
 </style>
 </head>
 
@@ -15,17 +15,19 @@
     <div class="col-xs-10">
 
       <div class="row">
-        <div class="col-xs-1">
+        <div class="col-xs-2">
+          <div class="voffset4"></div>
           <% if logged_in? && admin? %>
-            <%= link_to 'New Bike rack', new_bike_rack_path, class: 'btn btn-default' %> 
+          <%= link_to 'New Bike rack', new_bike_rack_path, class: 'btn btn-default' %> 
           <% end %>
         </div>
-        <div class="col-xs-10">
-        <h1 id="title">Bike Racks - Total:<%= BikeRack.all.count %></h1>
+        <div class="col-xs-8">
+          <h1 id="title">Bike Racks - Total:<%= BikeRack.all.count %></h1>
         </div>
-        <div class="col-xs-1">
+        <div class="col-xs-2">
+          <div class="voffset4"></div>
           <% if logged_in? && admin? %>
-              <%= button_to "Populate", bikeracks_populateBRData_path, class: 'btn btn-default' %>
+          <%= button_to "Populate", bikeracks_populateBRData_path, class: 'btn btn-default' %>
           <% end %>
         </div>
       </div>
