--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -2,21 +2,28 @@
 
 <p id="notice"><%= notice %></p>
 
+<head>
+<style>
+.voffset4 { margin-top: 30px; }
+</style>
+</head>
 
 <div class="container">
   <div class="row">
     <div class="col-xs-1"></div>
     <div class="col-xs-10">
       <div class="row">
-        <div class="col-xs-1">        
+        <div class="col-xs-2">        
+          <div class="voffset4"></div>
           <% if logged_in? && admin? %>
             <%= link_to 'New Water fountain', new_water_fountain_path, class: 'btn btn-default' %>
           <% end %>
         </div>
-        <div class="col-xs-10" id="title">
-        <h1>Water Fountains - Total: <%= WaterFountain.all.count %></h1>
+        <div class="col-xs-8">
+        <h1 id="title">Water Fountains - Total: <%= WaterFountain.all.count %></h1>
         </div>
-        <div class="col-xs-1">
+        <div class="col-xs-2">
+          <div class="voffset4"></div>
           <% if logged_in? && admin? %>
             <%= button_to "Populate", waterfountains_populateWFData_path, class: 'btn btn-default' %>
           <% end %>
