--- a/app/views/water_fountains/show.html.erb
+++ b/app/views/water_fountains/show.html.erb
@@ -39,3 +39,8 @@
   </div>
 </div>
 
+<%- unless current_user.favorite_water_fountains.exists?(id: @water_fountain.id) -%>
+<%= link_to 'Add to favorites', favorite_water_fountains_path(water_fountain_id: @water_fountain), method: :post %>
+<%- else -%>
+<%= link_to 'Remove from favorites', favorite_water_fountain_path(@water_fountain), method: :delete %>
+<%- end -%>
