--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,12 @@
 </head>
 <body>
 
-	   <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
+<%= render 'shared/nav'%>
+
+
+<% flash.each do |name, msg| -%>
+<%= content_tag :div, msg, class: "alert alert-#{name}" %>
+<% end -%>
 
 <%= yield %>
 
