--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -90,9 +90,9 @@ var set_favorite = function(id){
 
 	      for(i = 0; i < br.length; i++) {
 	      	var bikeRack = br[i];
-	      	var str = bikeRack.location;
+	      //	var str = bikeRack.location;
 	      	var sid = bikeRack.id;
-	      	var bikeRackLocation = str.substring(str.indexOf(":") + 1);
+	      //	var bikeRackLocation = str.substring(str.indexOf(":") + 1);
           var numbikeracks = bikeRack.quantity;
 	      	var rackLatLng = new google.maps.LatLng(bikeRack.latitude, bikeRack.longitude);
 	      	if(computeDistance(results[0].geometry.location, rackLatLng) < radius){
@@ -100,8 +100,8 @@ var set_favorite = function(id){
 	      		var marker = new google.maps.Marker({
 	      			map: map,
 	      			position: rackLatLng,
-              num: numbikeracks
-              info: bikeRackLocation,
+              num: numbikeracks,
+             // info: bikeRackLocation,
               id: sid,
               animation: google.maps.Animation.DROP
 	      		});
@@ -113,7 +113,7 @@ var set_favorite = function(id){
             
 
             google.maps.event.addListener(marker, 'click', function(id) {
-              infowindow.setContent('<p>Bike Rack Location: '+ this.info +'</p>' +
+              infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
                 '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_bike_rack?bike_rack_id='+this.id+'">Add to favorites</a></row>');
               infowindow.open(map, this);
               
