--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -84,7 +84,7 @@ geocoder.geocode( { 'address': "300 homer st Vancouver"}, function(results, stat
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
-                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
               infowindow.open(map, this);
             });
 
@@ -130,10 +130,9 @@ function computeDistance(pt1, pt2){
     };
 
 //The following function is to favourite water fountains
-var set_favorite = function(id){
+var get_info = function(id){
   if(<%= logged_in? %>){
     window.location.href="/water_fountains/"+id;
-    //alert(id);
   } else {
     window.location.href="/signup";
   }
@@ -176,7 +175,7 @@ var set_favorite = function(id){
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
-                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button onclick="get_info('+ this.id +')">Info</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
               infowindow.open(map, this);
             });
 
