--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -86,7 +86,8 @@ function computeDistance(pt1, pt2){
 	      		var marker = new google.maps.Marker({
 	      			map: map,
 	      			position: rackLatLng,
-              num: numbikeracks
+              num: numbikeracks,
+              animation: google.maps.Animation.DROP
 	      		});
             markers.push(marker);
 
@@ -113,4 +114,3 @@ function computeDistance(pt1, pt2){
 
 google.maps.event.addDomListener(window, 'load', initialize);
     </script>
-
