--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -114,10 +114,10 @@ var set_favorite = function(id){
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
-                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_bike_rack?bike_rack_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button></row>');
               infowindow.open(map, this);
               
-              
+              //
               
               
               // infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
