--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -112,10 +112,10 @@ var set_favorite = function(id){
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
-                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button></row>');
               infowindow.open(map, this);
             });
-
+// <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a>
 	      	}
 	      }
 	      if(counter == 0){
