--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -39,18 +39,16 @@ var myBounds = new google.maps.LatLngBounds(
 var infowindow = new google.maps.InfoWindow();
 
 
-function showFavourites() {
+  function showFavourites() {
 
 if (<%= !logged_in? %>) {
   window.location.href = "/login";
 }
 
-
 if (<%= logged_in? %>) {
-alert(<%= @user.favorite_bike_racks.count %>);
 
 var favBR = (<%=raw @user.favorite_bike_racks.to_json %>);
-deleteMarkers();
+    deleteMarkers();
 
   geocoder.geocode( { 'address': "300 homer st Vancouver"}, function(results, status) {
     if (status == google.maps.GeocoderStatus.OK) {
@@ -60,47 +58,65 @@ deleteMarkers();
 	      var radius = 1000;
 
 	      for(i = 0; i < favBR.length; i++) {
-	      	var fountain = favBR[i];
-          var str = fountain.location;
-          var sid = fountain.id;
-          var fountainlocation = str.substring(str.indexOf(":") + 1);
-	      	var fountainLatLng = new google.maps.LatLng(fountain.lat, fountain.lon);
+	      	var bikeRack = favBR[i];
 
-	      	  counter++;
+	      	var sid = bikeRack.id;
+                var numbikeracks = bikeRack.quantity;
+	      	var rackLatLng = new google.maps.LatLng(bikeRack.latitude, bikeRack.longitude);
+
+	      		counter++;
 	      		var marker = new google.maps.Marker({
 	      			map: map,
-	      			position: fountainLatLng,
-              info: fountainlocation,
+	      			position: rackLatLng,
+              num: numbikeracks,
               id: sid,
               animation: google.maps.Animation.DROP
 	      		});
 
+var favourited = false;         
+for(j = 0; j < favBR.length; j++) {
+
+if(favBR[j].id == sid) {
+favourited = true;
+}
+
+}
+
+
             markers.push(marker);
 
-
+if (favourited) {
             google.maps.event.addListener(marker, 'click', function(id) {
-              infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
-                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
+              infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="delete" href="/favorite_bike_racks/'+this.id+'">Remove from favorites</a></row>');
               infowindow.open(map, this);
+                                          
             });
+}
+else {
+            google.maps.event.addListener(marker, 'click', function(id) {
+              infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_bike_racks?bike_rack_id='+this.id+'">Add to favorites</a></row>');
+              infowindow.open(map, this);
+                                          
+            });
+}
 
 	      	
 	      }
-	      if(counter == 0){
-	        alert("No water fountains in favorite list!");
+	      if (counter == 0){
+	      	alert("No bike racks in favourite list!")
 	      }
 
 	  } else {
-	  	alert("Sorry, something broke..");
+	  	alert("Sorry, something broke...");
 	  }
     } else {
       alert('Geocode was not successful for the following reason: ' + status);
     }
   });
-
 }
 }
-
 
 function initialize() {
   geocoder = new google.maps.Geocoder();
@@ -127,7 +143,7 @@ function computeDistance(pt1, pt2){
     };
 
 //The following function is to favourite bike racks
-var set_favorite = function(id){
+var get_info = function(id){
   if(<%= logged_in? %>){
     window.location.href="/bike_racks/"+id;
     //alert(id);
@@ -175,7 +191,7 @@ var set_favorite = function(id){
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
-                '<row> <button onclick="set_favorite('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_bike_rack?bike_rack_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button onclick="get_info('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_bike_racks?bike_rack_id='+this.id+'">Add to favorites</a></row>');
               infowindow.open(map, this);
               
               
@@ -200,7 +216,6 @@ var set_favorite = function(id){
     }
   });
 }
-
 google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 
