--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -39,13 +39,12 @@ var myBounds = new google.maps.LatLngBounds(
 var infowindow = new google.maps.InfoWindow();
 
 
+
   function showFavourites() {
 
 if (<%= !logged_in? %>) {
   window.location.href = "/login";
-}
-
-if (<%= logged_in? %>) {
+} else{
 
 var favBR = (<%=raw @user.favorite_bike_racks.to_json %>);
     deleteMarkers();
@@ -73,6 +72,7 @@ var favBR = (<%=raw @user.favorite_bike_racks.to_json %>);
               animation: google.maps.Animation.DROP
 	      		});
 
+
 var favourited = false;         
 for(j = 0; j < favBR.length; j++) {
 
@@ -82,13 +82,15 @@ favourited = true;
 
 }
 
-
             markers.push(marker);
 
 if (favourited) {
             google.maps.event.addListener(marker, 'click', function(id) {
-              infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
-                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="delete" href="/favorite_bike_racks/'+this.id+'">Remove from favorites</a></row>');
+              infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' + 
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> ' + 
+
+'<a rel="nofollow" data-method="delete" href="/favorite_bike_racks/'+this.id+'">Remove from favorites</a>' 
++ '</row>');
               infowindow.open(map, this);
                                           
             });
@@ -144,12 +146,9 @@ function computeDistance(pt1, pt2){
 
 //The following function is to favourite bike racks
 var get_info = function(id){
-  if(<%= logged_in? %>){
+
     window.location.href="/bike_racks/"+id;
-    //alert(id);
-  } else {
-    window.location.href="/signup";
-  }
+
 };
 
 //The following js functions are based on the Google Maps API Samples
@@ -167,9 +166,9 @@ var get_info = function(id){
 
 	      for(i = 0; i < br.length; i++) {
 	      	var bikeRack = br[i];
-	      //	var str = bikeRack.location;
+
 	      	var sid = bikeRack.id;
-	      //	var bikeRackLocation = str.substring(str.indexOf(":") + 1);
+
           var numbikeracks = bikeRack.quantity;
 	      	var rackLatLng = new google.maps.LatLng(bikeRack.latitude, bikeRack.longitude);
 	      	if(computeDistance(results[0].geometry.location, rackLatLng) < radius){
@@ -178,7 +177,6 @@ var get_info = function(id){
 	      			map: map,
 	      			position: rackLatLng,
               num: numbikeracks,
-             // info: bikeRackLocation,
               id: sid,
               animation: google.maps.Animation.DROP
 	      		});
@@ -187,20 +185,56 @@ var get_info = function(id){
             
             
             
-            
+if(<%= !logged_in? %>) {
+            google.maps.event.addListener(marker, 'click', function(id) {
+              infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a href="/login">Add to favorites</a></row>');
+              infowindow.open(map, this);            
+            });
+} else {
+
+var favBR = (<%= raw @user.favorite_bike_racks.to_json %>);
+
+var favourited = false;
+for(k = 0; k < favBR.length; k++) {
+
+if(sid == favBR[k].id) {
+favourited = true;
+}
+
+}
+
+if(favourited) {
+
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
-                '<row> <button onclick="get_info('+ this.id +')">Favourite</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_bike_racks?bike_rack_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="delete" href="/favorite_bike_racks/'+this.id+'">Remove from favorites</a></row>');
               infowindow.open(map, this);
-              
-              
-              
-              
-              // infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
-              //   '<row> <button onclick="myFunction()">Favourite</button> <button onclick="myFunction()">Tweet</button></row>');
-              // infowindow.open(map, this);
+                                          
             });
+
+} else {
+
+
+            google.maps.event.addListener(marker, 'click', function(id) {
+              infowindow.setContent('<p>Number of bike racks: ' + this.num.toString() + '</p>' +
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_bike_racks?bike_rack_id='+this.id+'">Add to favorites</a></row>');
+              infowindow.open(map, this);
+                                          
+            });
+
+}
+
+
+
+
+
+
+
+
+
+}
 
 	      	}
 	      }
