--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -49,9 +49,7 @@ function showFavourites() {
 
 if (<%= !logged_in? %>) {
   window.location.href = "/login";
-}
-
-if (<%= logged_in? %>) {
+} else {
 
 var favWF = (<%=raw @user.favorite_water_fountains.to_json %>);
 deleteMarkers();
@@ -84,7 +82,7 @@ geocoder.geocode( { 'address': "300 homer st Vancouver"}, function(results, stat
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
-                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
               infowindow.open(map, this);
             });
 
@@ -169,6 +167,39 @@ var get_info = function(id){
 
             markers.push(marker);
 
+if(<%= !logged_in? %>) {
+            google.maps.event.addListener(marker, 'click', function(id) {
+              infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
+
+                '<row> <button onclick="get_info('+ this.id +')">Info</button> <button onclick="myFunction()">Tweet</button> <a href="/login">Add to favorites</a></row>');
+
+              infowindow.open(map, this);
+            });
+
+} else {
+
+var favWF = (<%= raw @user.favorite_water_fountains.to_json %>);
+
+var favourited = false;
+for(k = 0; k < favWF.length; k++) {
+
+if(sid == favWF[k].id) {
+favourited = true;
+}
+}
+
+if(favourited) {
+
+            google.maps.event.addListener(marker, 'click', function(id) {
+              infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
+
+                '<row> <button onclick="get_info('+ this.id +')">Info</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
+
+              infowindow.open(map, this);
+            });
+
+} else {
+
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
 
@@ -176,6 +207,15 @@ var get_info = function(id){
 
               infowindow.open(map, this);
             });
+
+}
+
+
+}
+
+
+
+
 
 	      	}
 	      }
