--- a/app/views/bike_racks/show.html.erb
+++ b/app/views/bike_racks/show.html.erb
@@ -43,12 +43,13 @@
   </div>
 </div>
 
-
-<%- unless current_user.favorite_bike_racks.exists?(id: @bike_rack.id) -%>
-<%= link_to 'Add to favorites', favorite_bike_racks_path(bike_rack_id: @bike_rack), method: :post %>
-<%- else -%>
-<%= link_to 'Remove from favorites', favorite_bike_rack_path(@bike_rack), method: :delete %>
-<%- end -%>
+<% if logged_in? %>
+  <%- unless current_user.favorite_bike_racks.exists?(id: @bike_rack.id) -%>
+  <%= link_to 'Add to favorites', favorite_bike_racks_path(bike_rack_id: @bike_rack), method: :post %>
+  <%- else -%>
+  <%= link_to 'Remove from favorites', favorite_bike_rack_path(@bike_rack), method: :delete %>
+  <%- end -%>
+<% end %>
 
 
 
