--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -66,7 +66,7 @@
               </ul>
             </li>
       <% else %>
-        <li><input type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';" value="Log in" /><li>
+        <li><input type="button" class="btn btn-default navbar-btn" onclick="location.href='/login'" value="Log in" /><li>
       <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
