--- a/app/views/water_fountains/show.html.erb
+++ b/app/views/water_fountains/show.html.erb
@@ -30,8 +30,12 @@
       </div>
       <div class="voffset2"></div>
       <div class="row">
-      <%= link_to 'Edit', edit_water_fountain_path(@water_fountain) %> |
-      <%= link_to 'Back', water_fountains_path %>
+<% if logged_in? %>        
+<% if admin? %>
+<%= link_to 'Edit', edit_water_fountain_path(@water_fountain) %> | 
+<% end %>
+<% end %>
+<%= link_to 'Back to Water Fountain table', water_fountains_path %>
       </div>
 </div>
       
