--- a/app/views/bike_racks/show.html.erb
+++ b/app/views/bike_racks/show.html.erb
@@ -40,7 +40,7 @@
     <%= link_to 'Edit', edit_bike_rack_path(@bike_rack) %> |
 <% end %>
 <% end %>
-    <%= link_to 'Back', bike_racks_path %>
+    <%= link_to 'Back to Bike Rack table', bike_racks_path %>
   </div>
 </div>
 
