branched off to test twitter

--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -162,16 +162,34 @@ var get_info = function(id){
 	      		});
 
             markers.push(marker);
+            var text  = '<p>Fountain Location: '+ this.info +'</p><row> <button onclick="get_info('+ this.id +')">Info</button><a href="https://twitter.com/intent/tweet?button_hashtag=H2gO&text=Getting%20hydrated%20with%20H2GO!%20%23quenched" class="twitter-hashtag-button">Tweet #H2gO</a><a href="/login">Add to favorites</a></row>';
+
 
 
 if(<%= !logged_in? %>) {
             google.maps.event.addListener(marker, 'click', function(id) {
-              infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
+              var info = new google.maps.InfoWindow();
+              info.setContent('<p>Fountain Location: '+ this.info +'</p><row> <button onclick="get_info('+ this.id +')">Info</button><button><a href="https://twitter.com/intent/tweet?button_hashtag=H2gO&text=Getting%20hydrated%20with%20H2GO!%20%23quenched" class="twitter-hashtag-button">Tweet #H2gO</a></button><a href="/login">Add to favorites</a></row>');
 
-                '<row> <button onclick="get_info('+ this.id +')">Info</button> <button onclick="myFunction()">Tweet</button> <a href="/login">Add to favorites</a></row>');
-
-              infowindow.open(map, this);
+              info.open(map, this);
+              twttr.widgets.load();
+              !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+              
             });
+
+            google.maps.event.addListener(infowindow, 'domready', function () {
+               ! function (d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (!d.getElementById(id)) {
+              js = d.createElement(s);
+              js.id = id;
+              js.src = "//platform.twitter.com/widgets.js";
+              fjs.parentNode.insertBefore(js, fjs);
+                }
+               }(document, "script", "twitter-widgets");
+              });
+
+           
 
 } else {
 
@@ -219,15 +237,10 @@ if(favourited) {
                 }
                }(document, "script", "twitter-widgets");
               });
-
-}
-
-
-}
+        }
 
 
-
-
+    } 
 
 	      	}
 	      }
@@ -243,12 +256,43 @@ if(favourited) {
     }
   });
 }
+window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+ 
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+ 
+  return t;
+}(document, "script", "twitter-wjs"));
+
 
 google.maps.event.addDomListener(window, 'load', initialize);
 
 
 
 
-
-
     </script>
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+ 
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+ 
+  return t;
+}(document, "script", "twitter-wjs"));</script>
