--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -200,7 +200,7 @@ if(favourited) {
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
 
-                '<row> <button onclick="get_info('+ this.id +')">Info</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a></row>');
+                '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button> <a class="btn btn-default" rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a> <br> <div class="voffset2"></div> <a class="twitter-share-button" href="http://twitter.com/intent/tweet?url=www.h2go.com&text=Getting+hydrated+with+H2GO!&hashtags=quenched,H2GO" data-count="none">Share H2GO, bro</a> <br> </row>');
 
 
               infowindow.open(map, this);
