--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,13 @@
-
+<head>
+<style>
+  h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+</style>  
+</head>
 
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
