--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,17 @@
+<head>
+  <style>
 
+.btn-primary {
+ color: white !important
+}
+
+  </style>
+</head>
 
 <div class="container">
 	<div class="jumbotron">
 		<h1>H2GO</h2>
 		<p>Where to get hydrated on the go!</p>
-		<p><a class="btn btn-primary btn-lg" href="https://youtu.be/dQw4w9WgXcQ" role="button">Learn more</a></p>
+	<a class="btn btn-primary btn-lg" href="https://youtu.be/dQw4w9WgXcQ" role="button">Learn more</a>
 	</div>
 </div>
