--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -1,6 +1,11 @@
 <head>
 <style>
-.voffset4 { margin-top: 30px; }
+    h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
 </style>
 </head>
 
