--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -3,7 +3,28 @@
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry"></script>
 
+<head>
+<style>
 
+#map-container {
+   height: 80vh;
+   border-radius: 16px 16px;
+   border-color: #fff;
+   border-style: solid;
+   box-shadow: 2px 2px 10px #B1B1B1;
+   margin-top: 20px;
+   border-width: 7px;
+ }
+ #map {
+   height: 100%;
+   width: 100%;
+ }
+
+</style>
+</head>
+
+
+<div class="container">
 <div class="row"><!-- input-group -->
   <div class="col-md-4"></div>
   <div class="col-md-5">
@@ -22,10 +43,15 @@
     <button class="btn btn-default" type="button" onclick="showFavourites()">Show Favourites!</button>
   </div>
 </div>
+</div>
+
 
 <div id="map-container">
   <div id="map"></div>
 </div>
+
+
+
 
 <script>
 var geocoder;
