--- a/app/views/water_fountains/edit.html.erb
+++ b/app/views/water_fountains/edit.html.erb
@@ -1,4 +1,13 @@
-
+<head>
+  <style>
+            h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+  </style>
+</head>
 
 <div class="container">
   <div class="row">
