--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -126,9 +126,11 @@ geocoder.geocode( { 'address': "300 homer st Vancouver"}, function(results, stat
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
-                '<row> <button onclick="get_info('+ this.id +')">Show</button> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
+      '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button>  <a class="btn btn-default" rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favourites</a> <br> <div class="voffset2"></div> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <br> </row>');
+
               infowindow.open(map, this);
             });
+
 
 	      	
 	      }
@@ -177,11 +179,7 @@ function computeDistance(pt1, pt2){
 
 //The following function is to favourite water fountains
 var get_info = function(id){
-  if(<%= logged_in? %>){
     window.location.href="/water_fountains/"+id;
-  } else {
-    window.location.href="/signup";
-  }
 };
 
 //The following js functions are based on the Google Maps API Samples
@@ -220,7 +218,8 @@ if(<%= !logged_in? %>) {
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
 
-                '<row> <button onclick="get_info('+ this.id +')">Info</button> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <a href="/login">Add to favorites</a></row>');
+                '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button>  <a class="btn btn-default" href="/login">Add to favourites</a> <br> <div class="voffset2"></div> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <br> </row>');
+
 
               infowindow.open(map, this);
             });
@@ -242,7 +241,7 @@ if(favourited) {
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
 
-                '<row> <button onclick="get_info('+ this.id +')">Info</button> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
+                '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button>  <a class="btn btn-default" rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favourites</a> <br> <div class="voffset2"></div> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <br> </row>');
 
               infowindow.open(map, this);
             });
@@ -252,7 +251,7 @@ if(favourited) {
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
 
-                '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button>  <a class="btn btn-default" rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a> <br> <div class="voffset2"></div> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <br> </row>');
+                '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button>  <a class="btn btn-default" rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favourites</a> <br> <div class="voffset2"></div> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <br> </row>');
 
 
               infowindow.open(map, this);
