styling about page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,3 +15,12 @@
 	<a class="btn btn-primary btn-lg" href="https://youtu.be/dQw4w9WgXcQ" role="button">Learn more</a>
 	</div>
 </div>
+
+
+
+
+
+
+    <div class='container'>
+  <div class='row'><i class='icon-facebook'></i><i class='icon-twitter'></i><i class='icon-googleplus'></i><i class='icon-pinterest'></i><i class='icon-dribbble'></i></div>
+</div>
