fixed heat maps

--- a/app/views/bike_racks/heatmap.html.erb
+++ b/app/views/bike_racks/heatmap.html.erb
@@ -3,7 +3,14 @@
 <meta charset="utf-8">
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=visualization"></script>
 
-
+<head>
+<style>
+ #map {
+   height: 80vh;
+   width: 100%;
+ }
+</style>
+</head>
   
 
 <script type="text/javascript">
