--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -281,7 +281,7 @@ if(favourited) {
 	      }
 
 	  } else {
-	  	alert("Sorry, we don't cover this area.... yet!");
+	  	alert("Are you sure your search is in Vancouver? (Try adding 'Vancouver' to your search)");
 	  }
     } else {
       alert('Geocode was not successful for the following reason: ' + status);
