--- a/app/views/water_fountains/heatmap.html.erb
+++ b/app/views/water_fountains/heatmap.html.erb
@@ -7,7 +7,15 @@
     
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=visualization"></script>
 
-  
+<head>
+<style>
+
+ #map-canvas {
+   height: 80vh;
+   width: 100%;
+ }
+</style>
+</head>  
 
 <script type="text/javascript">
 var bikeRacks = [];
