added ryans image

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -13,7 +13,7 @@
 
  position: relative;
 
- left: 15px;
+ left: 110px;
 
 }
 
@@ -56,7 +56,8 @@ h1 {
         background-size: 100%;
 }
 .circular#ryan {
-	background: url(http://i.imgur.com/UyoEsSn.png) no-repeat;
+	background: url(https://scontent.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/10629825_10202777171454301_4199704578944386853_n.jpg?oh=1dc2a5d71039c39af22636810a042e6a&oe=5622AE76) no-repeat;
+        background-size: 100%;
 }
 .circular#armando {
 	background: url(https://files.slack.com/files-pri/T063UM5B4-F07QU3AQY/pic.jpg) no-repeat;
@@ -231,10 +232,7 @@ h1 {
       <div class="row">
 
         <div class='row icon' id="ryanIcon">
-          <i class='icon-facebook'></i>
-          <i class='icon-twitter'></i>
-          <i class='icon-googleplus'></i>
-          <i class='icon-pinterest'></i></div>
+          <i class='icon-facebook' onclick="ryanFB()"></i>
         </div>
 
     </div>
@@ -267,6 +265,9 @@ function armandoTwitter() {
 }
 function armandoLinkedIn() {
   window.open("https://ca.linkedin.com/pub/armando-bollain/17/a05/11a");
+}
+function ryanFB() {
+  window.open("https://www.facebook.com/ryan.hsu.140");
 }
 
 </script>
