fixed armandos picture

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -60,7 +60,7 @@ h1 {
         background-size: 100%;
 }
 .circular#armando {
-	background: url(https://files.slack.com/files-pri/T063UM5B4-F07QU3AQY/pic.jpg) no-repeat;
+	background: url(https://scontent.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/185100_10151112737783073_1803937796_n.jpg?oh=0bb13ad31f2d95df78730484fe055019&oe=56212191) no-repeat;
         background-size: 100%;
 }
 
